--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-if [ "$(showvirtualenv)" != "atmatr" ]; then workon atamatr; fi
+if [ "$(showvirtualenv)" != "atmatr" ]; then workon atmatr; fi
 export ATMATR_ENV=dev
