--- a/pytest.ini
+++ b/pytest.ini
@@ -10,7 +10,6 @@ addopts =
 	-q
 	-s
 	-r f
-	--pep8
 	--random
 	--reuse-db
 	--tb native
@@ -20,6 +19,8 @@ pep8maxlinelength = 99
 pep8ignore =
 	* E702 E714
 	app/urls.py E301 E302 E303
+    tests/*__init__.py ALL
+    tests/* E501
 markers =
 	unit: Mark a test as a unit test. Useful for running only unit tests.
 	integration: Mark a test as an integration test. Useful for running only integration tests.
