--- a/atmatr/public/static/javascript/package.json
+++ b/atmatr/public/static/javascript/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://github.com/galarant/atmatr",
   "dependencies": {
     "grunt": "0.4.x",
-    "d3": "~3.4.8"
+    "jquery": "~2.1.1"
   },
   "engines": {
     "node": ">= 0.10.0"
