--- a/atmatr/public/static/javascript/package.json
+++ b/atmatr/public/static/javascript/package.json
@@ -5,7 +5,8 @@
   "homepage": "https://github.com/galarant/atmatr",
   "dependencies": {
     "grunt": "0.4.x",
-    "jquery": "~2.1.1"
+    "jquery": "~2.1.1",
+    "require": "~0.5.0"
   },
   "engines": {
     "node": ">= 0.10.0"
